# UAV_part2

UAV1/: eval_results.txt  metrics.json  output.txt  pyproject.toml  pytest.ini  quick_run.py  requirements.txt  run_full_experiments.py  setup.py  show_results.py  validate_before_experiments.py  verify_advanced_models.py
UAV1/dual_uav_isac.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
UAV1/notebooks/: quick_viz.ipynb
UAV1/run/demo/greedy_sense/: results.jsonl
UAV1/run/demo/sac/: results.jsonl
UAV1/run/demo/sac/tb/SAC_2/: events.out.tfevents.1773512094.LAPTOP-GOTL7VRI.8768.0
UAV1/run/sac_a05_u8_t1/: config.json  results.jsonl
UAV1/run/sac_a05_u8_t1/baselines/circle/: results.jsonl
UAV1/run/sac_a05_u8_t1/baselines/greedy_comms/: results.jsonl
UAV1/run/sac_a05_u8_t1/tb/SAC_1/: events.out.tfevents.1762988127.LAPTOP-GOTL7VRI.6904.0
UAV1/run/sac_a05_u8_t1_50steps/tb/SAC_1/: events.out.tfevents.1773566919.LAPTOP-GOTL7VRI.3008.0
UAV1/run/sac_full/tb/SAC_1/: events.out.tfevents.1773512789.LAPTOP-GOTL7VRI.13360.0
UAV1/run/smoke/greedy_comms/: results.jsonl
UAV1/run/smoke/sac/: config.json  results.jsonl
UAV1/src/baselines/: heuristics.py
UAV1/src/configs/: advanced.yaml  baseline.yaml  default.yaml
UAV1/src/envs/: advanced_models.py  dual_isac_env.py  utils.py
UAV1/src/eval/: eval_rollout.py  plots.py
UAV1/src/scripts/: demo.py  make_pareto.py
UAV1/src/training/: train_mappo.py  train_sac.py  train_td3.py
UAV1/src/visualize/: animate_uav.py
UAV1/tests/: conftest.py  test_env.py
latex/: COMPILATION_GUIDE.md  generate_figures.py  (+1 more)
(+5 files in other folders)
