[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dual-uav-isac"
version = "0.1.0"
description = "Dual UAV-assisted ISAC with Deep Reinforcement Learning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=0.29.1",
    "numpy>=1.26",
    "scipy>=1.11",
    "torch>=2.1",
    "stable-baselines3==2.3.2",
    "matplotlib>=3.8",
    "tyro>=0.7.3",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.6",
    "tensorboard>=2.15",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"


